--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,33 @@
     ],
     "routes": [
         {
+            "src": "/(.*)",{
+    "version": 2,
+    "builds": [
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/verify",
+            "dest": "/public/verify.html"
+        },
+        {
             "src": "/(.*)",
+            "dest": "/public/$1"
+        }
+    ]
+} 
             "dest": "/server.js"
         }
     ]
