--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,30 @@
 {
     "version": 2,
+    "buildCommand": "npm run build",
+    "installCommand": "npm install",
+    "framework": "node",
     "builds": [
         {
             "src": "server.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "server.js"
+        },
+        {
+            "src": "/verify",
+            "dest": "public/verify.html"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/server.js"
+            "dest": "public/$1"
         }
     ]
 } 
