--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
     "version": 2,
-    "buildCommand": "npm run build",
-    "installCommand": "npm install",
     "builds": [
         {
             "src": "server.js",
@@ -14,7 +12,19 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
+            "src": "/api/dashboard",
+            "dest": "server.js"
+        },
+        {
+            "src": "/api/session",
+            "dest": "server.js"
+        },
+        {
+            "src": "/api/discord/(.*)",
+            "dest": "server.js"
+        },
+        {
+            "src": "/api/role-update/(.*)",
             "dest": "server.js"
         },
         {
