--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "express-rate-limit": "^7.1.5",
     "express": "^4.18.2",
+    "rate-limit-redis": "^4.2.0",
+    "ioredis": "^5.3.2"
     "cors": "^2.8.5",
     "ethers": "^6.13.4",
     "express-rate-limit": "^7.5.0",
