--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^7.5.0",
     "express": "^4.18.2",
     "rate-limit-redis": "^4.2.0",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
     "cors": "^2.8.5",
     "ethers": "^6.13.4",
-    "express-rate-limit": "^7.5.0",
     "uuid": "^11.0.3",
     "dotenv": "^16.4.7",
     "axios": "^1.7.9"
