--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ethers": "^5.0.0",
     "uuid": "^11.0.3",
     "dotenv": "^16.4.7",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "discord.js": "^14.0.0" // Add this line
   },
   "engines": {
     "node": ">=18.0.0"
